<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    android:padding="10dp"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_activity"
        android:textColor="@color/dark_royal_purle"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/input_text_field_styling"
                android:hint="@string/first_name"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@drawable/input_text_field_styling"
                android:hint="@string/last_name"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

        </LinearLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/input_text_field_styling"
            android:hint="Email"
            android:paddingLeft="10dp"
            android:textColorHint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_height="55dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/input_text_field_styling"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/confirm"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:background="@drawable/input_text_field_styling"
                android:hint="Confirm"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColorHint="@color/black" />

        </LinearLayout>

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/main_btn_styling"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:textColor="@color/dark_royal_purle"
            android:textFontWeight="700" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="goToSignInAct"
            android:text="@string/go_to_sign_in"
            android:textColor="@color/dark_royal_purle"
            android:textSize="18dp" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_margin="20sp"
        android:background="@drawable/main_btn_styling"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
        android:onClick="backToHome"
        android:padding="20sp"
        android:text="Back to Home"
        android:textColor="@color/dark_royal_purle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.183" />

</androidx.constraintlayout.widget.ConstraintLayout>